Add page header

--- a/app/request/template.hbs
+++ b/app/request/template.hbs
@@ -1,4 +1,9 @@
 {{page-title "Request"}}
-<div class="max-w-screen-lg mx-auto">
+<div class="bg-neutral-300 py-10 mb-12">
+	<h1 class="max-w-screen-lg mx-auto pl-3 text-3xl font-serif">Request Appointment</h1>
+</div>
+
+<div class="flex max-w-screen-lg mx-auto">
+	<AppointmentSteps />
 	{{outlet}}
 </div>
