Add nav component

--- a/app/request/template.hbs
+++ b/app/request/template.hbs
@@ -1,5 +1,5 @@
 {{page-title "Request"}}
-<div class="bg-neutral-300 py-10 mb-12">
+<div class="bg-neutral-300 py-10 mb-12 mt-28">
 	<h1 class="max-w-screen-lg mx-auto pl-3 text-3xl font-serif">Request Appointment</h1>
 </div>
 
