Add step component and service

--- a/app/request/service/template.hbs
+++ b/app/request/service/template.hbs
@@ -1,5 +1,5 @@
 {{page-title "Service"}}
-<div class="max-w-screen-md">
+<div class="w-3/4">
 	<div class="flex bg-gray-100 rounded mb-5 p-2" data-test-sign-in>
 		<p>Already a client,
 			<a href="#">Sign In</a>
