--- a/app/request/location/template.hbs
+++ b/app/request/location/template.hbs
@@ -1,6 +1,6 @@
 {{page-title "Location"}}
 
-<div class="gap-y-4 grid grid-cols-3 justify-items-center">
+<div class="gap-4 grid grid-cols-3 justify-items-center">
 	{{#each this.model as |location| }}
 		<div class="border border-slate-200 max-w-[275px]" data-test-location-item>
 			<div class="border-b-slate-200">
