--- a/app/components/appointment-steps/template.hbs
+++ b/app/components/appointment-steps/template.hbs
@@ -1,3 +1,4 @@
+{{log this "rendered"}}
 <ul class="p-3 w-1/4">
     {{#each this.appointmentSteps.steps as |step index| }}
 		<AppointmentSteps::StepLink
